Fix dash instead of underline

--- a/deployment/puppet/nagios/templates/openstack/openstack.cfg.erb
+++ b/deployment/puppet/nagios/templates/openstack/openstack.cfg.erb
@@ -21,4 +21,4 @@ command[check_swift_container]=<%= libdir %>/nagios/plugins/check_procs -c 1:10 
 command[check_swift_ring]=/usr/lib64/nagios/plugins/check_os_swiftrecon objmd5
 command[check_libvirt]=/usr/lib64/nagios/plugins/check_os_libvirt connect -H 127.0.0.1 -m qemu+tcp
 command[check_mongodb]=<%= libdir %>/nagios/plugins/check_mongodb
-command[check_ceph-osd]=<%= libdir %>/nagios/plugins/check_ceph_osd
+command[check_ceph_osd]=<%= libdir %>/nagios/plugins/check_ceph_osd
